--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^3.0.0",
     "mongoose": "^4.13.7",
     "morgan": "^1.9.0",
+    "path": "^0.12.7",
     "request": "^2.83.0"
   }
 }
